<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Robot Turtles App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level2">Level2</string>
    <string name="title_activity_level3">Level3</string>
    <string name="win_message_title">Congratulations!</string>
    <string name="win_message_text">You Win!</string>
    <string name="replay_message_title">Congratulations!</string>
    <string name="replay_message_text">You have completed the game!</string>
    <string name="directions_text">Move the turtle through the maze with the forward, left, and right buttons.
	    Get to the jewel to win!</string>
    <string name="directions_title">Game Directions</string>
    <string name="run">Run</string>
    <string name="start_game">Start</string>
    <string name="reset">Continue to Next Map</string>
    <string name="map1">Map 1</string>
    <string name="map2">Map 2</string>
    <string name="map3">Map 3</string>
    <string name="map4">Map 4</string>
    <string name="map5">Map 5</string>
    <string name="map6">Map 6</string>
    <string name="map7">Map 7</string>
    <string name="map8">Map 8</string>
    <string name="map9">Map 9</string>
    <string name="map10">Map 10</string>
    <string name="map11">Map 11</string>
    <string name="map12">Map 12</string>
    <string name="map13">Map 13</string>
    <string name="map14">Map 14</string>
    <string name="map15">Map 15</string>
    <string name="tmap1">Tutorial 1</string>
    <string name="tmap2">Tutorial 2</string>
    <string name="tmap3">Tutorial 3</string>
    <string name="T00">T00</string>
    <string name="T01">T01</string>
    <string name="T02">T02</string>
    <string name="T03">T03</string>
    <string name="T04">T04</string>
    <string name="T05">T05</string>
    <string name="T06">T06</string>
    <string name="T07">T07</string>
    <string name="T10">T10</string>
    <string name="T11">T11</string>
    <string name="T12">T12</string>
    <string name="T13">T13</string>
    <string name="T14">T14</string>
    <string name="T15">T15</string>
    <string name="T16">T16</string>
    <string name="T17">T17</string>
    <string name="T20">T20</string>
    <string name="T21">T21</string>
    <string name="T22">T22</string>
    <string name="T23">T23</string>
    <string name="T24">T24</string>
    <string name="T25">T25</string>
    <string name="T26">T26</string>
    <string name="T27">T27</string>
    <string name="T30">T30</string>
    <string name="T31">T31</string>
    <string name="T32">T32</string>
    <string name="T33">T33</string>
    <string name="T34">T34</string>
    <string name="T35">T35</string>
    <string name="T36">T36</string>
    <string name="T37">T37</string>
    <string name="T40">T40</string>
    <string name="T41">T41</string>
    <string name="T42">T42</string>
    <string name="T43">T43</string>
    <string name="T44">T44</string>
    <string name="T45">T45</string>
    <string name="T46">T46</string>
    <string name="T47">T47</string>
    <string name="T50">T50</string>
    <string name="T51">T51</string>
    <string name="T52">T52</string>
    <string name="T53">T53</string>
    <string name="T54">T54</string>
    <string name="T55">T55</string>
    <string name="T56">T56</string>
    <string name="T57">T57</string>
    <string name="T60">T60</string>
    <string name="T61">T61</string>
    <string name="T62">T62</string>
    <string name="T63">T63</string>
    <string name="T64">T64</string>
    <string name="T65">T65</string>
    <string name="T66">T66</string>
    <string name="T67">T67</string>
    <string name="T70">T70</string>
    <string name="T71">T71</string>
    <string name="T72">T72</string>
    <string name="T73">T73</string>
    <string name="T74">T74</string>
    <string name="T75">T75</string>
    <string name="T76">T76</string>
    <string name="T77">T77</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Forward">Forward</string>
    <string name="Laser">Laser</string>
    <string name="Run">Start Level 1</string>
    <string name="MapMenu">Map Menu</string>
    <string name="title_activity_xmlparser">XMLParser</string>
    <string name="title_activity_win">Win</string>
    <string name="title_activity_win_display">WinDisplay</string>

</resources>