<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.bsu.cs222.Map" >
    <item 
        android:id="@+id/tmap1"
        android:orderInCategory="1"
        android:title="@string/tmap1"/>
    <item
        android:id="@+id/tmap2"
        android:orderInCategory="2"
        android:title="@string/tmap2"/>
    <item 
        android:id="@+id/tmap3"
        android:orderInCategory="3"
        android:title="@string/tmap3"/>
    <item
        android:id="@+id/map1"
        android:orderInCategory="4"
        android:title="@string/map1"/>
    <item
        android:id="@+id/map2"
        android:orderInCategory="5"
        android:title="@string/map2"/>
    <item
        android:id="@+id/map3"
        android:orderInCategory="6"
        android:title="@string/map3"/>
	<item
        android:id="@+id/map4"
        android:orderInCategory="7"
        android:title="@string/map4"/>
	<item
        android:id="@+id/map5"
        android:orderInCategory="8"
        android:title="@string/map5"/>
	<item
        android:id="@+id/map6"
        android:orderInCategory="9"
        android:title="@string/map6"/>
	<item
        android:id="@+id/map7"
        android:orderInCategory="10"
        android:title="@string/map7"/>
	<item
        android:id="@+id/map8"
        android:orderInCategory="11"
        android:title="@string/map8"/>
	<item
        android:id="@+id/map9"
        android:orderInCategory="12"
        android:title="@string/map9"/>
	<item
        android:id="@+id/map10"
        android:orderInCategory="13"
        android:title="@string/map10"/>
	<item 
	    android:id="@+id/map11"
	    android:orderInCategory="14"
	    android:title="@string/map11"/>
	<item 
	    android:id="@+id/map12"
	    android:orderInCategory="15"
	    android:title="@string/map12"/>
	<item 
	    android:id="@+id/map13"
	    android:orderInCategory="16"
	    android:title="@string/map13"/>
	<item 
	    android:id="@+id/map14"
	    android:orderInCategory="17"
	    android:title="@string/map14"/>
	<item 
	    android:id="@+id/map15"
	    android:orderInCategory="18"
	    android:title="@string/map15"/>
</menu>
