<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    tools:context="edu.bsu.cs222.robot_turtles_map" >

    <GridView
        android:id="@+id/gameGrid"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:numColumns="8" >
    </GridView>

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MapMenu" />
    
	<HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/CardHolder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" 
            android:onClick="onClick">
  </LinearLayout>
    </HorizontalScrollView>
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Left" />

            <Button
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Forward" />

            <Button
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Right" />
            <Button
                android:id="@+id/laser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Laser" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Run Bot" />

</TableLayout>